Added two more indentation levels.  Also indentation automatically matches the preceding paragraph if it doesn't match any of the rules.

--- a/ff-wacReader/spacing.css
+++ b/ff-wacReader/spacing.css
@@ -21,3 +21,11 @@
 #contentWrapper div.level3 {
   margin-left: 50px;
 }
+
+#contentWrapper div.level4 {
+  margin-left: 70px;
+}
+
+#contentWrapper div.level5 {
+  margin-left: 90px;
+}
